# alerty

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: config.rs  default_output_template.html  error.rs  lib.rs  main.rs  source_iter.rs  utils.rs
src/sources/: bandwear.rs  github_releases.rs  instagram.rs  mod.rs  platekompaniet.rs
