[package]
name = "alerty"
version = "0.1.0"
edition = "2021"

[dependencies]
cookie_store = "0.20.0"
itertools = "0.12.0"
scraper = "0.18.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
ureq = { version = "2.8.0", features = ["json", "charset", "cookies"] }
