[package]
name = "alerty"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
cookie_store = "0.20.0"
itertools = "0.12.0"
lettre = "0.11.1"
minijinja = { version = "1.0.10", features = ["loader"] }
scraper = "0.18.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
ureq = { version = "2.8.0", features = ["json", "charset", "cookies"] }
